--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+              "node_modules/@fortawesome/fontawesome-free/js/brands.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -100,8 +105,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "0ea58b42-9f93-4fe9-8387-9eb848e39c1e"
   }
 }
